--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ task fatJar(type: Jar) {
         attributes 'Implementation-Title': 'Gradle Jar File Example',  
         	'Main-Class': 'com.main.Main'
     }
-    baseName = project.name
+    baseName = 'DBCTest'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
